WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
288462
[TexMap] Wrong damage on layer resize
https://bugs.webkit.org/show_bug.cgi?id=288462
Summary
[TexMap] Wrong damage on layer resize
Pawel Lampe
Reported
2025-02-25 00:31:29 PST
.
Attachments
Add attachment
proposed patch, testcase, etc.
Pawel Lampe
Comment 1
2025-02-26 01:11:35 PST
Pull request:
https://github.com/WebKit/WebKit/pull/41389
EWS
Comment 2
2025-02-27 02:22:06 PST
Committed
291215@main
(5d4f841d57c1): <
https://commits.webkit.org/291215@main
> Reviewed commits have been landed. Closing PR #41389 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-02-27 02:23:24 PST
<
rdar://problem/145730694
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug