[TexMap] Wrong damage on layer resize https://bugs.webkit.org/show_bug.cgi?id=288462

Reviewed by Carlos Garcia Campos.

This change fixes the damage produced by layer resizes. From
now on, the damage includes the area damaged before resize.
Moreover, the layer offset is now correctly taken into account.

* LayoutTests/platform/glib/TestExpectations:
* Source/WebCore/platform/graphics/texmap/TextureMapperLayer.cpp:
(WebCore::TextureMapperLayer::setDamage):
(WebCore::transformRectFromLayerToGlobalCoordinateSpace):
(WebCore::TextureMapperLayer::collectDamageSelf):
(WebCore::TextureMapperLayer::collectDamageSelfChildrenFilterAndMask):
(WebCore::TextureMapperLayer::damageWholeLayerDueToTransformChange):
(WebCore::TextureMapperLayer::setSize):
(WebCore::TextureMapperLayer::transformRectForDamage): Deleted.
* Source/WebCore/platform/graphics/texmap/TextureMapperLayer.h:
(WebCore::TextureMapperLayer::canInferDamage const):

Canonical link: https://commits.webkit.org/291215@main