Source/WebCore/platform/graphics/texmap/TextureMapperLayer.cpp
@@ -373,7 +373,7 @@ void TextureMapperLayer::paint(TextureMapper& textureMapper)
 #if ENABLE(DAMAGE_TRACKING)
 void TextureMapperLayer::setDamage(const Damage& damage)
 {
-    m_damage = damage;
+    m_receivedDamage = damage;
 }
 
 void TextureMapperLayer::collectDamage(TextureMapper& textureMapper, Damage& damage)
@@ -403,6 +403,19 @@ void TextureMapperLayer::collectDamageSelfAndChildren(TextureMapperPaintOptions&
         child->collectDamageRecursive(options, damage);
 }
 
+static FloatRect transformRectFromLayerToGlobalCoordinateSpace(const FloatRect& rect, const TransformationMatrix& transform, const TextureMapperPaintOptions& options)
+{
+    auto transformedRect = transform.mapRect(rect);
+    // Some layers are drawn on an intermediate surface and have this offset applied to convert to the
+    // intermediate surface coordinates. In order to translate back to actual coordinates,
+    // we have to undo it.
+    transformedRect.move(-options.offset);
+    auto clipBounds = options.textureMapper.clipBounds();
+    clipBounds.move(-options.offset);
+    transformedRect.intersect(clipBounds);
+    return transformedRect;
+}
+
 void TextureMapperLayer::collectDamageSelf(TextureMapperPaintOptions& options, Damage& damage)
 {
     ASSERT(m_damagePropagation);
@@ -419,30 +432,38 @@ void TextureMapperLayer::collectDamageSelf(TextureMapperPaintOptions& options, D
     transform.multiply(options.transform);
     transform.multiply(m_layerTransforms.combined);
 
-    ASSERT(!m_damage.isInvalid());
-    ASSERT(!m_inferredDamage.isInvalid());
-    if (!m_inferredDamage.isEmpty()) {
-        for (const auto& rect : m_inferredDamage.rects()) {
+    ASSERT(!m_receivedDamage.isInvalid());
+    ASSERT(!m_inferredLayerDamage.isInvalid());
+    ASSERT(!m_inferredGlobalDamage.isInvalid());
+    // Inferred damage always takes precedence over any other kind of damage as it stores
+    // the damage that is a result of the layer-level operations.
+    if (!m_inferredGlobalDamage.isEmpty() || !m_inferredLayerDamage.isEmpty()) {
+        for (const auto& rect : m_inferredGlobalDamage.rects()) {
             ASSERT(!rect.isEmpty());
             damage.add(rect);
+        }
+        for (const auto& rect : m_inferredLayerDamage.rects()) {
+            ASSERT(!rect.isEmpty());
+            damage.add(transformRectFromLayerToGlobalCoordinateSpace(rect, transform, options));
         }
     } else if (m_contentsLayer) {
         // Layers with content layer are fully damaged if there's no explicit damage.
         // FIXME: Remove that special case.
-        damage.add(transformRectForDamage(targetRect, transform, options));
+        damage.add(transformRectFromLayerToGlobalCoordinateSpace(targetRect, transform, options));
     } else {
         // Use the damage information we received from the GraphicsLayer
         // Here we ignore the targetRect parameter as it should already have
         // been covered by the damage tracking in setNeedsDisplay/setNeedsDisplayInRect
         // calls from GraphicsLayer.
-        for (const auto& rect : m_damage.rects()) {
+        for (const auto& rect : m_receivedDamage.rects()) {
             ASSERT(!rect.isEmpty());
-            damage.add(transformRectForDamage(rect, transform, options));
+            damage.add(transformRectFromLayerToGlobalCoordinateSpace(rect, transform, options));
         }
     }
 
-    m_damage = { };
-    m_inferredDamage = { };
+    m_receivedDamage = { };
+    m_inferredLayerDamage = { };
+    m_inferredGlobalDamage = { };
 }
 
 void TextureMapperLayer::collectDamageSelfChildrenReplicaFilterAndMask(TextureMapperPaintOptions& options, Damage& damage)
@@ -473,7 +494,7 @@ void TextureMapperLayer::collectDamageSelfChildrenFilterAndMask(TextureMapperPai
                 IntRect tileRect(IntPoint(x, y), maxTextureSize);
                 tileRect.intersect(rect);
 
-                m_accumulatedOverlapRegionDamage.unite(transformRectForDamage(tileRect, options.transform, options));
+                m_accumulatedOverlapRegionDamage.unite(transformRectFromLayerToGlobalCoordinateSpace(tileRect, options.transform, options));
             }
         }
     }
@@ -486,21 +507,8 @@ void TextureMapperLayer::damageWholeLayerDueToTransformChange(const Transformati
 {
     // When the layer's transform changes, we must not only damage whole layer using new transform,
     // but also using old transform to cover the area not affected by layer anymore.
-    m_inferredDamage.add(afterChange.mapRect(layerRect()));
-    m_inferredDamage.add(beforeChange.mapRect(layerRect()));
-}
-
-FloatRect TextureMapperLayer::transformRectForDamage(const FloatRect& rect, const TransformationMatrix& transform, const TextureMapperPaintOptions& options)
-{
-    auto transformedRect = transform.mapRect(rect);
-    // Some layers are drawn on an intermediate surface and have this offset applied to convert to the
-    // intermediate surface coordinates. In order to translate back to actual coordinates,
-    // we have to undo it.
-    transformedRect.move(-options.offset);
-    auto clipBounds = options.textureMapper.clipBounds();
-    clipBounds.move(-options.offset);
-    transformedRect.intersect(clipBounds);
-    return transformedRect;
+    m_inferredGlobalDamage.add(afterChange.mapRect(layerRect()));
+    m_inferredGlobalDamage.add(beforeChange.mapRect(layerRect()));
 }
 #endif
 
@@ -1262,9 +1270,10 @@ void TextureMapperLayer::setSize(const FloatSize& size)
 {
 #if ENABLE(DAMAGE_TRACKING)
     if (canInferDamage() && m_state.size != size) {
-        // When layer size changes, we damage whole layer for now.
+        // When layer size changes, we damage whole layer (before and after) for now.
         // FIXME: Damage only affected area.
-        m_inferredDamage.add(m_state.transform.mapRect(FloatRect(FloatPoint::zero(), size)));
+        m_inferredLayerDamage.add(FloatRect(FloatPoint::zero(), m_state.size));
+        m_inferredLayerDamage.add(FloatRect(FloatPoint::zero(), size));
     }
 #endif
     m_state.size = size;
